--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Unicorn Guesser</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
+    <link rel="shortcut icon" href='images/logo.gif' type="image/png">
   </head>
   <body>
     <header role="banner" >
