Update colors and functions to show range on the guess button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="all-inside">
       <form class="main-content">
         <input class="user-guess" type="number" placeholder="Enter your guess" name="number" min="1" max="100">
-        <button class="guess-number top-bttn guess-bttn">Guess</button>
+        <button class="guess-number top-bttn guess-bttn">Guess Range 1 - <span class="range-numbers"></span> </button>
         <button class="clear-number top-bttn guess-bttn">Clear</button>
       </form>
       <p class="last-guess">Your last guess was</p>
