Test for focusout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </form>
       <p class="last-guess">Your last guess was</p>
       <h2 class="user-guess-number">??</h2>
-      <p class="low-or-high">Pick a number,<br> between 1 and 15 to start<br>If you rescue a unicorn <br> the range opens up by 15</p>
+      <p class="low-or-high">Guess a number<br> between 1 and 15 to start<br>If you rescue a unicorn <br> the range opens up by 15</p>
       <p class="high-score-placeholder">High Score:<span class="high-score">0</span></p>
       <p class="guess-count-placeholder">Guesses:<span class="guess-count">0</span></p>
       <p class="unicorn-rescued-placeholder">Rescued unicorns:<span class="unicorn-rescued">0</span></p>
