--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <section class="all-inside">
       <form class="main-content">
         <input class="user-guess" type="number" placeholder="Enter your guess" name="number" min="1" max="100">
+        <!-- <label for="guess-number">Guess 1 - <span class="range-numbers"></span></label> -->
+        <!-- <input class="guess-number" type="button" name="guess-number"> -->
         <button name="number" class="guess-number top-bttn guess-bttn">Guess 1 - <span class="range-numbers"></span> </button>
         <button class="clear-number top-bttn guess-bttn">Clear</button>
       </form>
