--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Unicorn Guesser</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
-    <link rel="shortcut icon" href='images/logo.gif' type="image/png">
+    <link rel="shortcut icon" href='images/logo.png' type="image/png">
   </head>
   <body>
     <header role="banner" >
@@ -26,6 +26,12 @@
       <p class="unicorn-rescued-placeholder">Rescued unicorns:<span class="unicorn-rescued">0</span></p>
       <button class="reset reset-blue">Reset</button>
       </article>
+      <img class="size hide-one one" src="http://stickerpacks.multiverso-media.com/img/fat-unicorn/Coffee--.gif" alt="">
+      <img class="size hide-two two" src="http://moziru.com/images/drawn-unicorn-pink-unicorn-5.png">
+      <img class="size hide-three three" src="https://www.spreadshirt.com/image-server/v1/mp/designs/1011693776,width=178,height=178/unicorn-dab.png">
+      <img class="size hide-four four" src="https://s12.favim.com/orig/170512/happybirthday-unicorn-Favim.com-5188077.gif">
+      <img class="size hide-five five" src="http://moziru.com/images/green-clipart-unicorn-4.png">
+      <img class="size hide-six six" src="http://moziru.com/images/unicorn-clipart-male-17.png">
     </section>
     <script type="text/javascript" src="script.js"></script>
   </body>
