Updates for code fair

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <section class="all-inside">
       <form class="main-content">
         <input class="user-guess" type="number" placeholder="Enter your guess" name="number" min="1" max="100">
-        <!-- <label for="guess-number">Guess 1 - <span class="range-numbers"></span></label> -->
-        <!-- <input class="guess-number" type="button" name="guess-number"> -->
         <button name="number" class="guess-number top-bttn guess-bttn">Guess 1 - <span class="range-numbers"></span> </button>
         <button class="clear-number top-bttn guess-bttn">Clear</button>
       </form>
@@ -28,10 +26,11 @@
       </article>
       <img class="size hide-one one" src="http://stickerpacks.multiverso-media.com/img/fat-unicorn/Coffee--.gif" alt="">
       <img class="size hide-two two" src="http://moziru.com/images/drawn-unicorn-pink-unicorn-5.png">
-      <img class="size hide-three three" src="https://www.spreadshirt.com/image-server/v1/mp/designs/1011693776,width=178,height=178/unicorn-dab.png">
+      <img class="size hide-three three" src="https://derpicdn.net/img/2016/1/31/1077351/large.png">
       <img class="size hide-four four" src="https://s12.favim.com/orig/170512/happybirthday-unicorn-Favim.com-5188077.gif">
       <img class="size hide-five five" src="http://moziru.com/images/green-clipart-unicorn-4.png">
-      <img class="size hide-six six" src="http://moziru.com/images/unicorn-clipart-male-17.png">
+      <img class="size hide-seven seven" src="http://moziru.com/images/unicorn-clipart-male-17.png">
+      <img src="images/burrito-dab.png" class="size hide-six six">
     </section>
     <script type="text/javascript" src="script.js"></script>
   </body>
