--- a/index.html
+++ b/index.html
@@ -7,31 +7,40 @@
     <link rel="shortcut icon" href='images/logo.png' type="image/png">
   </head>
   <body>
-    <header role="banner" >
-      <h1 class="header-h1">Unicorn<span class="header-h1-span">Guesser</span></h1>
-    </header>
-    <section class="all-inside">
-      <form class="main-content">
-        <input class="user-guess" type="number" placeholder="Enter your guess" name="number" min="1" max="100">
-        <button name="number" class="guess-number top-bttn guess-bttn">Guess 1 - <span class="range-numbers"></span> </button>
-        <button class="clear-number top-bttn guess-bttn">Clear</button>
-      </form>
-      <p class="last-guess">Your last guess was</p>
-      <h2 class="user-guess-number">??</h2>
-      <p class="low-or-high">Guess a number<br> between 1 and 15 to start<br>If you rescue a unicorn <br> the range opens up by 15</p>
-      <p class="high-score-placeholder">High Score:<span class="high-score">0</span></p>
-      <p class="guess-count-placeholder">Guesses:<span class="guess-count">0</span></p>
-      <p class="unicorn-rescued-placeholder">Rescued unicorns:<span class="unicorn-rescued">0</span></p>
-      <button class="reset reset-blue">Reset</button>
-      </article>
-      <img class="size hide-one one" src="http://stickerpacks.multiverso-media.com/img/fat-unicorn/Coffee--.gif" alt="">
-      <img class="size hide-two two" src="http://moziru.com/images/drawn-unicorn-pink-unicorn-5.png">
-      <img class="size hide-three three" src="https://derpicdn.net/img/2016/1/31/1077351/large.png">
-      <img class="size hide-four four" src="https://s12.favim.com/orig/170512/happybirthday-unicorn-Favim.com-5188077.gif">
-      <img class="size hide-five five" src="http://moziru.com/images/green-clipart-unicorn-4.png">
-      <img class="size hide-seven seven" src="http://moziru.com/images/unicorn-clipart-male-17.png">
-      <img src="images/burrito-dab.png" class="size hide-six six">
-    </section>
-    <script type="text/javascript" src="script.js"></script>
+     <header role="banner">
+    <h1 class="header-h1">Unicorn
+      <span class="header-h1-span">Guesser</span>
+    </h1>
+  </header>
+  <section class="all-inside">
+    <form class="main-content">
+      <input class="user-guess" type="number" placeholder="Enter your guess" name="number" min="1" max="100">
+      <button name="number" class="guess-number top-bttn guess-bttn">Guess 1 -
+        <span class="range-numbers"></span>
+      </button>
+      <button class="clear-number top-bttn guess-bttn">Clear</button>
+    </form>
+    <p class="last-guess">Your last guess was</p>
+    <h2 class="user-guess-number">??</h2>
+    <p class="low-or-high">Guess a number
+      <br> between 1 and 15 to start
+      <br>If you rescue a unicorn
+      <br> the range opens up by 15</p>
+    <p class="guess-count-placeholder">Guesses:
+      <span class="guess-count">0</span>
+    </p>
+    <p class="unicorn-rescued-placeholder">Rescued unicorns:
+      <span class="unicorn-rescued">0</span>
+    </p>
+    <button class="reset reset-blue">Reset</button>
+    </article>
+    <img class="size hide-one one" src="http://stickerpacks.multiverso-media.com/img/fat-unicorn/Coffee--.gif" alt="unicorn">
+    <img class="size hide-two two" src="http://moziru.com/images/drawn-unicorn-pink-unicorn-5.png" alt="unicorn">
+    <img class="size hide-three three" src="https://derpicdn.net/img/2016/1/31/1077351/large.png" alt="unicorn">
+    <img class="size hide-four four" src="https://s12.favim.com/orig/170512/happybirthday-unicorn-Favim.com-5188077.gif" alt="unicorn">
+    <img class="size hide-five five" src="http://moziru.com/images/green-clipart-unicorn-4.png" alt="unicorn">
+    <img class="size hide-seven seven" src="http://moziru.com/images/unicorn-clipart-male-17.png" alt="unicorn">
+    <img src="images/burrito-dab.png" class="size hide-six six" alt="unicorn">
+  </section>
   </body>
 </html>
