--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
     <img class="size hide-seven seven" src="http://moziru.com/images/unicorn-clipart-male-17.png" alt="unicorn">
     <img src="images/burrito-dab.png" class="size hide-six six" alt="unicorn">
   </section>
+  <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
